# truthound-dashboard

./: .gitignore  CLAUDE.md  LICENSE  README.md  mkdocs.yml  package-lock.json  pyproject.toml  render.yaml  vercel.json
.claude/docs/: architecture.md  phase-1-foundation.md  phase-2-core-features.md  phase-3-notifications.md  phase-4-production.md  roadmap.md
.github/: copilot-instructions.md  dependabot.yml
.github/ci/: backend-mypy-ratchet.txt  frontend-eslint-ratchet.txt
.github/workflows/: _backend-checks.yml  _backend-ratchet.yml  _docs-checks.yml  _frontend-checks.yml  _frontend-ratchet.yml  _preview-build.yml  _release-verify.yml  _secret-integrations.yml  _security-checks.yml  ci.yml  codeql.yml  docs.yml  release-verification.yml  release.yml  tests-nightly.yml  tests-pr.yml  trigger-docs.yml
docs/: advanced-features.md  api.md  architecture.md  configuration.md  features.md  getting-started.md  index.md  internationalization.md  intlayer-i18n-Guide.md
docs/advanced/: enterprise-sampling.md  ml.md  observability.md  plugins.md  realtime.md  storage.md
docs/api-reference/: artifacts.md  auth-and-control-plane.md  drift-and-privacy.md  index.md  notifications-alerts-queues.md  overview-and-conventions.md  platform-and-observability.md  sources-and-ownership.md  validations-profiles-history.md
docs/concepts/: architecture.md  artifact-model.md  core-object-model.md  incident-and-queue-model.md  ownership-model.md  rbac-and-permissions.md  secrets-and-credential-rotation.md  workspaces-and-sessions.md
docs/data-management/: catalog.md  dashboard.md  glossary.md  sources.md
docs/data-quality/: drift-monitoring.md  drift.md  enterprise-sampling.md  lineage.md  privacy.md  profile-comparison.md  quality-reporter.md  rule-suggestions.md  schema-evolution.md  schema-watcher.md  validations.md
docs/guides/: checkpoints-and-notifications.md  checkpoints.md  drift.md  enterprise-sampling.md  history-and-trends.md  incident-workbench.md  lineage.md  ml.md  notifications.md  observability.md  plugins.md  privacy-scan-and-mask.md  privacy.md  profile-comparison.md  profile.md  profiling-and-comparison.md  realtime.md  reports-datadocs.md  (+13 more)
e2e/: package-lock.json  package.json  playwright.config.ts
frontend/: .env.demo  .env.development  .env.mock  .env.pip  index.html  intlayer.config.mjs  intlayer.config.ts  netlify.toml  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
scripts/: build_preview.sh  load_test.py
tests/: __init__.py  conftest.py  test_backend_surface.py  test_ci_secret_integrations.py  test_ci_surface.py  test_control_plane_hardening.py  test_docs_surface.py  test_enforcement_gates.py  test_frontend_surface.py  test_notification_secret_refs.py  test_phase4.py
(+1018 files in other folders)
